# guessing-game

./: CMakeLists.txt  README.md
app/: main.cpp
include/gg/: application.hpp  game.hpp  node.hpp  stream_interface.hpp  user_interface.hpp
src/: application.cpp  game.cpp  node.cpp  stream_interface.cpp  user_interface.cpp
tests/: game.cpp  main.cpp  node.cpp  stream_interface.cpp
